# fmod-web-test

./: .gitignore  Cargo.toml  README.md  desktop.sh  fmod-web.js  index.html  run-linux.sh  run-web.sh  run-windows.ps1  web-build.sh
.cargo/: config.toml
src/: desktop.rs  main.rs  prelude.rs  web.rs
src/audio/: backend_desktop.rs  backend_web.rs  mod.rs
