[package]
name = "fmod-test"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29.0"
fmod-audio-sys = "2.220.2"
fmod-oxide = "2.2.0-pre.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.100" }
web-sys = { version = "0.3.77", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
] }

[patch.crates-io]
# fmod-audio-sys = { path = "../../srb/fmod-oxide/fmod-sys" }
